@@ -16,6 +16,7 @@
   * Custom failure apps no longer ignored in test mode (by github.com/jaghion)
   * Do not depend on ActiveModel::Dirty
   * Manual sign_in now triggers remember token
+  * Be sure to halt strategies on failures
 
 * deprecations
   * Deprecated anybody_signed_in? in favor of signed_in? (by github.com/gavinhughes)
